--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -10,9 +10,11 @@
   left: 0;
   top: 0;
   z-index: 10;
-  margin: 15px;
-  letter-spacing: -3px;
+  margin: 10px;
+  letter-spacing: -4px;
   background: none;
+  font-weight: 100;
+  font-size: 18px;
 }
 
 .hl-logo:hover {
