--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -7,3 +7,14 @@
 body {
   font: 100% $font-stack;
 }
+
+a {
+  color: $gray-color;
+  text-decoration: none;
+  transition: 0.5s ease-in-out;
+}
+
+a:hover {
+  color: $dark-blue-color;
+  text-decoration: none;
+}
