Add contact section

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,6 @@
 *, html {
   background-color: $white-color;
-  letter-spacing: 2px;
+  letter-spacing: $letter-spacing;
   font: 100% $font-stack;
 }
 
