--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -11,7 +11,7 @@
 
 h3 {
   font-size: 30px;
-  letter-spacing: 2px;
+  letter-spacing: $letter-spacing;
   color: $dark-blue-color;
 
   // color: $gray-color;
