--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,3 +4,8 @@ $gray-color: #BDC3C7;
 $white-color: #ECF0F1;
 
 $font-stack: Helvetica, sans-serif;
+
+$p-font-size: 20px;
+$title-font-size: 50px;
+
+$letter-spacing: 2px;
