--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -10,13 +10,27 @@
 }
 
 h3 {
-  font-size: 30px;
+  font-size: 60px;
   letter-spacing: $letter-spacing;
   color: $dark-blue-color;
-
-  // color: $gray-color;
 }
 
+@media (max-width: 700px) {
+  h3 {
+    font-size: 45px;
+  }
+}
+@media (max-width: 600px) {
+  h3 {
+    font-size: 35px;
+  }
+}
+
+@media (max-width: 500px) {
+  h3 {
+    font-size: 30px;
+  }
+}
 .bold {
   color: $dark-blue-color;
   font-weight: 700;
