--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,6 +6,10 @@ $white-color: #ECF0F1;
 $font-stack: Helvetica, sans-serif;
 
 $p-font-size: 20px;
+$small-p-font-size: 15px;
 $title-font-size: 50px;
+$small-title-font-size: 35px;
+
 
 $letter-spacing: 2px;
+$button-font-size: 15px;
