--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -35,20 +35,19 @@
 }
 
 @media (max-width: 1000px) {
-  .projects-list {
-    width: 100vw;
+  .single-project {
+    width: 45%;
   }
 }
 
-@media (max-width: 892px) {
-  .projects-list {
-    width: 60vw;
-    margin: auto;
-  }
+@media (max-width: 700px) {
+  // .projects-list {
+  //   width: 60vw;
+  // }
 
   .single-project {
-    width: 100%;
-    margin: 0 0 10px 0;
+    width: 90%;
+    // margin: 0 0 10px 0;
   }
 }
 
@@ -57,7 +56,7 @@
     width: 80vw;
   }
   .projects-title {
-    font-size: 35px;
+    font-size: $small-title-font-size;
   }
 }
 
