--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -60,96 +60,167 @@
 }
 
 /*individual project*/
-.individual-project {
-  width: 100vw;
+// .individual-project {
+//   width: 100vw;
+//   height: 100vh;
+//   opacity: 0;
+//   position: absolute;
+// }
+//
+// .project-left {
+//   width: 50%;
+//   display: inline-block;
+//   float: left;
+// }
+//
+// .individual-project-image {
+//   width: 450px;
+//   margin: 150px 50px 0 50px;
+//   border: 5px solid $gray-color;
+// }
+//
+// .project-right {
+//   letter-spacing: $letter-spacing;
+//   color: $dark-blue-color;
+//   font-size: $p-font-size;
+//   line-height: 170%;
+// }
+//
+// .project-title {
+//   font-size: $title-font-size;
+//   line-height: 110%;
+//   margin: 150px 30px 5px 0;
+// }
+//
+// .project-description {
+//   margin: 0px 50px 150px 20px;
+// }
+//
+// .project-url, .project-github {
+//   display: block;
+//   letter-spacing: $letter-spacing;
+//   font-size: $p-font-size;
+//   height: 40px;
+//   width: 100%;
+//   margin-left: 55px;
+// }
+//
+// .project-button-section {
+//   text-align: center;
+//   opacity: 1;
+//   position: relative;
+// }
+//
+//
+// @media (max-width: 1030px) {
+//   .individual-project {
+//     width: 100vw;
+//     text-align: center;
+//     height: 100%;
+//   }
+//   .individual-project-image {
+//     width: 560px;
+//     margin-bottom: 10px;
+//   }
+//   .project-url, .project-github {
+//     display: block;
+//     height: 40px;
+//     width: 100%;
+//     margin: 0px;
+//   }
+//   .project-left {
+//     width: 100%;
+//     height: 100%;
+//     margin: auto;
+//   }
+//   .project-right {
+//     width: 80%;
+//     height: 100%;
+//     margin: auto;
+//     text-align: left;
+//   }
+//   .project-title {
+//     margin: auto;
+//   }
+//   .project-description {
+//     height: 100%;
+//     margin: auto;
+//   }
+//   .project-button-section {
+//     margin: auto;
+//     text-align: center;
+//   }
+// }
+
+.Project {
   height: 100vh;
-  opacity: 0;
-  position: absolute;
+  width: 100vw;
+  letter-spacing: $letter-spacing;
+}
+
+.individual-project {
+  width: 90%;
+  text-align: center;
+  margin: auto;
 }
 
 .project-left {
-  width: 50%;
-  display: inline-block;
-  float: left;
-  // height: 80%;
+  padding: 100px 50px 0px 50px;
 }
 
 .individual-project-image {
-  width: 450px;
-  margin: 150px 50px 0 50px;
-  border: 5px solid $gray-color;
-}
-
-.project-right {
-  letter-spacing: $letter-spacing;
-  color: $dark-blue-color;
-  font-size: $p-font-size;
-  line-height: 170%;
-  // height: 50%;
-}
-
-.project-title {
-  font-size: $title-font-size;
-  line-height: 110%;
-  margin: 150px 30px 5px 0;
-}
-
-.project-description {
-  margin: 0px 50px 150px 20px;
+  width: 75%;
+  text-align: center;
 }
 
 .project-url, .project-github {
   display: block;
-  letter-spacing: $letter-spacing;
+  margin: 15px;
   font-size: $p-font-size;
-  height: 40px;
-  width: 100%;
-  margin-left: 55px;
+}
+
+.project-right {
+  padding: 20px 50px;
+  text-align: left;
+}
+
+.project-title {
+  font-size: $title-font-size;
+  padding-bottom: 20px;
+}
+
+.project-description {
+  font-size: $p-font-size;
 }
 
 .project-button-section {
   text-align: center;
-  opacity: 1;
-  position: relative;
+  padding: 50px;
 }
 
-
-@media (max-width: 1030px) {
+@media (min-width: 850px) {
   .individual-project {
-    width: 100vw;
-    text-align: center;
-    height: 100%;
+    width: 75%;
   }
+}
+
+@media (max-width: 600px) {
   .individual-project-image {
-    width: 560px;
-    margin-bottom: 10px;
+    width: 90%;
+  }
+
+  .individual-project {
+    width: 100%;
   }
   .project-url, .project-github {
-    display: block;
-    height: 40px;
-    width: 100%;
-    margin: 0px;
+    font-size: $small-p-font-size;
   }
-  .project-left {
-    width: 100%;
-    height: 100%;
-    margin: auto;
-  }
-  .project-right {
-    width: 80%;
-    height: 100%;
-    margin: auto;
-    text-align: left;
-  }
+
   .project-title {
-    margin: auto;
+    font-size: $small-title-font-size;
   }
+
   .project-description {
-    height: 100%;
-    margin: auto;
-  }
-  .project-button-section {
-    margin: auto;
-    text-align: center;
+    font-size: $small-p-font-size;
   }
 }
