--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,15 +1,22 @@
-$dark-blue-color: #2C3E50;
-$blue-color: #34495E;
-$gray-color: #BDC3C7;
-$white-color: #ECF0F1;
+// $dark-blue-color: #2C3E50;
+// $blue-color: #34495E;
+// $gray-color: #BDC3C7;
+// $white-color: #ECF0F1;
+
+$dark-blue-color: #4F6367;
+$blue-color: #7A9E9F;
+$gray-color: #B8D8D8;
+$white-color: #EEF5DB;
+$red-color: #FE5F55;
 
 $font-stack: Helvetica, sans-serif;
+$second-font-family: Roboto, sans-serif;
 
 $p-font-size: 20px;
 $small-p-font-size: 15px;
 $title-font-size: 50px;
 $small-title-font-size: 35px;
-
+$about-title-font-size: 25px;
 
 $letter-spacing: 2px;
 $button-font-size: 15px;
