--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -53,7 +53,7 @@
 
 /*experience*/
 .experience-heading {
-  font-size: 25px;
+  font-size: $about-title-font-size;
 }
 
 .experience-list {
@@ -95,7 +95,7 @@
   float: right;
 }
 .skills-heading {
-  font-size: 25px;
+  font-size: $about-title-font-size;
 }
 
 .single-skill{
@@ -121,7 +121,7 @@
 }
 /*about this website*/
 .about-website-heading {
-  font-size: 25px;
+  font-size: $about-title-font-size;
   margin-bottom: 15px;
 }
 
@@ -130,6 +130,10 @@
 }
 
 .underline {
+  text-decoration: underline;
+}
+
+.underline:hover {
   text-decoration: underline;
 }
 
