--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,7 +2,7 @@
   background-color: white;
   letter-spacing: $letter-spacing;
   // font: 100% $font-stack;
-  font: 100% $second-font-family;
+  font-family: $second-font-family;
 }
 
 body {
