--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,7 +10,7 @@ $white-color: #EEF5DB;
 $red-color: #FE5F55;
 
 $font-stack: Helvetica, sans-serif;
-$second-font-family: Roboto, sans-serif;
+$second-font-family: 'Roboto', sans-serif;
 
 $p-font-size: 20px;
 $small-p-font-size: 15px;
