Add polling app to portfolio

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,14 +1,14 @@
 .Footer {
   opacity: 0;
+  background-color: none;
   position: absolute;
   bottom: 0;
   right: 0;
-  margin: 10px;
+  margin-bottom: 10px;
 }
 
 .single-contact {
   display: inline-block;
-  margin-top: 10vh;
   padding: 2px
 }
 
