--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -1,20 +1,18 @@
 .Contact {
   letter-spacing: $letter-spacing;
   color: $dark-blue-color;
-  text-align: center;
-  line-height: 200%;
+  position: relative;
+  width: 60vw;
   height: 100vh;
-  position: absolute;
+  margin: auto;
+  font-size: $p-font-size;
+  text-align: center;
 }
 
 .contact-section {
-  width: 70%;
-  position: relative;
-  height: 70vh;
-  font-size: $p-font-size;
-  width: 70%;
-  margin: 150px auto 0 auto;
   opacity: 0;
+  position: absolute;
+  margin-top: 25vh;
 }
 
 .contact-title {
@@ -27,10 +25,12 @@
   text-decoration: underline;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
+  .Contact {
+    width: 100vw;
+
+  }
   .contact-section {
-    width: 90%;
-    margin-top: 120px;
     font-size: $small-p-font-size;
   }
 
@@ -43,5 +43,4 @@
     font-size: 20px;
     text-decoration: underline;
   }
-
 }
