--- a/src/styles/partials/footer.scss
+++ b/src/styles/partials/footer.scss
@@ -1,26 +1,24 @@
 .Footer {
-  opacity: 0;
   background-color: none;
-  position: absolute;
   bottom: 0;
+  margin: 30px;
+  opacity: 0;
+  position: absolute;
   right: 0;
-  margin: 20px;
 }
 
 .single-contact {
   display: inline-block;
-  padding: 2px
+  padding-left: 4px;
 }
 
-.single-contact:hover {
-  cursor: pointer;
-  transition-duration: 1s ease-in-out;
-}
-
-.mail {
-  width: $icon-size;
+.mail, .linkedin, .github, .twitter {
   height: $icon-size;
-  display: block;
+  width: $icon-size;
+  @include transition($transition-duration ease-in-out);
+}
+
+.mail{
   background: url('../images/mail.png') no-repeat;
 }
 
@@ -29,9 +27,6 @@
 }
 
 .linkedin {
-  width: $icon-size;
-  height: $icon-size;
-  display:block;
   background: url('../images/linkedin.png') no-repeat;
 }
 
@@ -40,9 +35,6 @@
 }
 
 .github {
-  width: $icon-size;
-  height: $icon-size;
-  display:block;
   background: url('../images/github.png') no-repeat;
 }
 
@@ -51,9 +43,6 @@
 }
 
 .twitter {
-  width: $icon-size;
-  height: $icon-size;
-  display:block;
   background: url('../images/twitter.png') no-repeat;
 }
 
