--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -5,30 +5,28 @@ $gray-color: #B8D8D8;
 $white-color: #EEF5DB;
 $red-color: #FE5F55;
 
-// $font-stack: Helvetica, sans-serif;
-// $second-font-family: 'Roboto', sans-serif;
 
-// $small-p-font-size: 15px;
-// $about-title-font-size: 25px;
-
-$letter-spacing: 2px;
+//image sizes
 $icon-size: 33px;
 $logo-size: 60px;
 
-
 //fonts
 $title-font-stack: 'Work Sans', sans-serif;
-$hero-title-font-size: 50px;
-$title-font-size: 35px;
+$hero-title-font-size: 65px;
+$title-font-size: 50px;
+$medium-title-font-size: 30px;
+$small-title-font-size: 20px;
+
 
 $body-font-stack: 'Roboto', sans-serif;
-$body-font-size: 20px;
+$body-font-size: 18px;
+$body-line-height: 150%;
 
 $button-font-stack: 'Montserrat', sans-serif;
 $button-font-size: 15px;
 
 $link-font-stack: 'Montserrat', sans-serif;
-$link-font-size: 25px;
+$link-font-size: 35px;
 
 //transitions
 @mixin transition($args...) {
@@ -39,3 +37,9 @@ $link-font-size: 25px;
 }
 
 $transition-duration: 0.5s;
+
+//margin
+$main-margin: 50px;
+$top-margin: 80px;
+$main-padding: 20px;
+$small-padding: 10px;
