--- a/src/styles/partials/about.scss
+++ b/src/styles/partials/about.scss
@@ -1,184 +1,59 @@
-// .About {
-//   color: $dark-blue-color;
-//   letter-spacing: $letter-spacing;
-//   font-size: $p-font-size;
-//   line-height: 170%;
-//   text-align: center;
-// }
-// /*hero*/
-//
-// .hilary-lewis-image {
-//   margin: 50px 0 0 0;
-//   height: 250px;
-//   border-radius: 50%;
-//   box-shadow: 0 0 10px #D3D6DB;
-//   opacity: 0;
-// }
-//
-// /*about summary*/
-// .about-me {
-//   text-align: left;
-//   width: 70%;
-//   margin: 70px auto;
-//   opacity: 0;
-// }
-//
-// @media (max-width: 900px) {
-//   .about-me {
-//     width: 90%;
-//   }
-// }
-//
-// .title {
-//   padding: 30px 0;
-//   text-align: center;
-//   font-size: $title-font-size;
-// }
-//
-// @media (max-width: 500px) {
-//   .title {
-//     font-size: $small-title-font-size;
-//   }
-//   .About {
-//     font-size: $small-p-font-size;
-//   }
-//   .heading {
-//     font-size: 20px;
-//   }
-// }
-//
-// .summary {
-//   margin-bottom: 60px;
-// }
-//
-// /*experience*/
-// .experience-heading {
-//   font-size: $about-title-font-size;
-// }
-//
-// .experience-list {
-//   width: 70%;
-//   float: left;
-// }
-//
-// .single-experience{
-//   padding: 20px 0;
-//   width: 90%;
-//   border-bottom: 1px solid;
-// }
-//
-// .position {
-//   font-weight: 700;
-// }
-//
-// .company, .dates {
-//   font-size: 15px;
-// }
-//
-// @media (max-width: 700px) {
-//   .experience-heading {
-//     font-size: 20px;
-//   }
-//   .experience-list {
-//     width: 100%;
-//     padding-bottom: 20px;
-//   }
-//   .single-experience {
-//     padding: 20px;
-//   }
-// }
-//
-// /*skills*/
-// .skill-list{
-//   width: 30%;
-//   height: 80vh;
-//   float: right;
-// }
-// .skills-heading {
-//   font-size: $about-title-font-size;
-// }
-//
-// .single-skill{
-//   padding-top: 20px;
-// }
-//
-// @media (max-width: 700px) {
-//   .skills-heading {
-//     font-size: 20px;
-//   }
-//   .skill-list {
-//     width: 100%;
-//     float: left;
-//   }
-//   .single-skill{
-//     display: inline-block;
-//     padding: 20px;
-//   }
-//   .about-website-heading {
-//     font-size: 20px;
-//   }
-// }
-//
-// /*education*/
-// .education {
-//   margin-top: 40px;
-// }
-//
-// .education-title {
-//   font-size: $about-title-font-size;
-// }
-//
-// .education-school {
-//   padding-top: 10px;
-//   font-weight: 700;
-// }
-//
-// .education-degree {
-//   font-size: 15px;
-// }
-//
-// @media (max-width: 700px) {
-//   .education-title {
-//     font-size: 20px;
-//   }
-//   .education-school, .education-degree {
-//     margin-left: 10px;
-//   }
-// }
-//
-// @media (max-width: 500px) {
-//   .education-school {
-//     font-size: $small-p-font-size;
-//   }
-// }
-//
-//
-// /*about this website*/
-// .about-website-heading {
-//   font-size: $about-title-font-size;
-//   margin-bottom: 15px;
-// }
-//
-// .about-website-section {
-//   margin: 40px auto;
-// }
-//
-// .underline {
-//   text-decoration: underline;
-// }
-//
-// .underline:hover {
-//   text-decoration: underline;
-// }
-//
-// /*resume button*/
-// .resume-section {
-//   margin: 80px;
-//   text-align: center;
-//   display: block;
-// }
-//
-// /*resume page*/
+.About {
+  text-align: center;
+}
+
+.hilary-lewis-image {
+  margin-top: $top-margin;
+  height: 250px;
+  border-radius: 50%;
+  opacity: 0;
+}
+
+.about-me {
+  text-align: left;
+  width: 70%;
+  opacity: 0;
+}
+
+/*experience*/
+.experience-list {
+  width: 70%;
+  float: left;
+}
+
+.single-experience{
+  padding: $main-padding 0;
+  width: 90%;
+  border-bottom: 1px solid $blue-color;
+}
+
+/*skills*/
+.single-skill{
+  padding: 12px;
+}
+
+/*education*/
+.education {
+  padding: $main-padding 0px;
+}
+
+.education-school {
+  padding-top: $main-padding;
+}
+
+/*about this website*/
+.about-website {
+  padding-top: $main-padding;
+}
+.underline {
+  text-decoration: underline;
+  font-size: $body-font-size;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+/*resume page*/
 // .Resume {
 //   text-align: center;
 //   letter-spacing: $letter-spacing;
