--- a/src/styles/partials/buttons.scss
+++ b/src/styles/partials/buttons.scss
@@ -4,3 +4,11 @@ a, button {
     cursor: pointer;
   }
 }
+
+button {
+  border: 2px solid;
+  background-color: white;
+  padding: 10px;
+  border-radius: 50px;
+  margin: $main-margin;
+}
