--- a/src/styles/partials/footer.scss
+++ b/src/styles/partials/footer.scss
@@ -1,10 +1,11 @@
 .Footer {
   background-color: none;
   bottom: 0;
-  margin: 30px;
+  margin: $main-margin;
   opacity: 0;
-  position: absolute;
+  position: fixed;
   right: 0;
+  z-index: 100000000;
 }
 
 .single-contact {
