--- a/src/styles/partials/home.scss
+++ b/src/styles/partials/home.scss
@@ -1,40 +1,15 @@
-// .Home {
-//   height: 100vh;
-// }
-//
-// .hero-text {
-//   position: absolute;
-//   bottom: 0;
-//   opacity: 0;
-//   margin: 10px 40px;
-// }
-//
-// h3 {
-//   font-size: 60px;
-//   letter-spacing: $letter-spacing;
-//   color: $dark-blue-color;
-// }
-//
-// @media (max-width: 780px) {
-//   h3 {
-//     font-size: 45px;
-//   }
-//   .hero-text {
-//     margin: 10px;
-//   }
-// }
-// @media (max-width: 600px) {
-//   h3 {
-//     font-size: 35px;
-//   }
-// }
-//
-// @media (max-width: 500px) {
-//   h3 {
-//     font-size: 30px;
-//   }
-// }
-// .bold {
-//   color: $dark-blue-color;
-//   font-weight: 700;
-// }
+.Home {
+  bottom: 0;
+  margin: 10px $main-margin;
+  opacity: 0;
+  position: absolute;
+  z-index: -1;
+}
+
+.red {
+  padding-left: 5px;
+}
+
+.bold {
+  font-weight: 700;
+}
