--- a/src/styles/partials/footer.scss
+++ b/src/styles/partials/footer.scss
@@ -1,7 +1,7 @@
 .Footer {
   background-color: none;
   bottom: 0;
-  margin: $main-margin;
+  margin: 10px $main-margin;
   opacity: 0;
   position: fixed;
   right: 0;
