--- a/src/styles/partials/contact.scss
+++ b/src/styles/partials/contact.scss
@@ -1,46 +1,16 @@
-// .Contact {
-//   letter-spacing: $letter-spacing;
-//   color: $dark-blue-color;
-//   position: relative;
-//   width: 60vw;
-//   height: 100vh;
-//   margin: auto;
-//   font-size: $p-font-size;
-//   text-align: center;
-// }
-//
-// .contact-section {
-//   opacity: 0;
-//   position: absolute;
-//   margin-top: 25vh;
-// }
-//
-// .contact-title {
-//   margin: 50px;
-//   font-size: $title-font-size;
-// }
-//
-// .contact-email {
-//   font-size: 30px;
-//   text-decoration: underline;
-// }
-//
-// @media (max-width: 700px) {
-//   .Contact {
-//     width: 100vw;
-//
-//   }
-//   .contact-section {
-//     font-size: $small-p-font-size;
-//   }
-//
-//   .contact-title {
-//     margin: 20px;
-//     font-size: $small-title-font-size;
-//   }
-//
-//   .contact-email {
-//     font-size: 20px;
-//     text-decoration: underline;
-//   }
-// }
+.contact-section {
+  width: 60%;
+  margin: auto;
+  text-align: center;
+  opacity: 0;
+  margin-top: $top-margin;
+}
+
+.contact-email {
+  font-size: 30px;
+  padding: $main-padding;
+}
+
+.contact-summary{
+  padding: $main-padding;
+}
