--- a/src/styles/partials/footer.scss
+++ b/src/styles/partials/footer.scss
@@ -6,6 +6,9 @@
   position: fixed;
   right: 0;
   z-index: 100000000;
+  @media screen and (max-width: $break-small) {
+    margin: $small-margin;
+  }
 }
 
 .single-contact {
