--- a/src/styles/partials/footer.scss
+++ b/src/styles/partials/footer.scss
@@ -7,7 +7,7 @@
   right: 0;
   z-index: 100000000;
   @media screen and (max-width: $break-small) {
-    margin: $small-margin;
+    margin: 5px $small-margin;
   }
 }
 
