--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -1,10 +1,9 @@
 //colors
-$dark-blue-color: #4F6367;
-$blue-color: #7A9E9F;
-$gray-color: #B8D8D8;
-$white-color: #EEF5DB;
-$red-color: #FE5F55;
-
+$dark-blue-color: #1b3c59;
+$blue-color: #456173;
+$gray-color: #456173;
+$white-color: #f2f2f0;
+$red-color: #11bfae;
 
 //image sizes
 $icon-size: 33px;
