--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -10,18 +10,17 @@ $icon-size: 33px;
 $logo-size: 60px;
 
 //fonts
-$title-font-stack: 'Work Sans', sans-serif;
+$title-font-stack: 'Roboto', sans-serif;
 $hero-title-font-size: 65px;
 $title-font-size: 50px;
 $medium-title-font-size: 30px;
 $small-title-font-size: 20px;
 
 
-$body-font-stack: 'Roboto', sans-serif;
+$body-font-stack: 'Montserrat', sans-serif;
 $body-font-size: 18px;
 $body-line-height: 150%;
-
-$button-font-stack: 'Montserrat', sans-serif;
+$button-font-stack: 'Work Sans', sans-serif;
 $button-font-size: 15px;
 
 $link-font-stack: 'Montserrat', sans-serif;
