Responsive projects page;

--- a/src/styles/partials/projects.scss
+++ b/src/styles/partials/projects.scss
@@ -9,9 +9,9 @@
 .single-project {
   height: 90vh;
   margin-left: $main-margin;
-  // border-bottom: 1px solid $blue-color;
   @media screen and (max-width: 1000px) {
-    margin: $small-margin;
+    height: 100vh;
+    margin: $main-margin;
   }
 }
 
@@ -26,6 +26,7 @@
 .project-right {
   width: 50%;
   float: right;
+  margin-bottom: $main-margin;
   @media screen and (max-width: 1000px) {
     width: 100%;
   }
@@ -34,8 +35,12 @@
 .project-image {
   width: 450px;
   margin-left: $main-margin;
+  @media screen and (max-width: 1050px) {
+    margin: 0px $small-margin;
+  }
   @media screen and (max-width: $break-small) {
     width: 100%;
+    margin: 0px;
   }
 }
 
@@ -50,11 +55,23 @@
 .project-title {
   padding: $main-padding 0px;
   margin-top: $main-margin;
+  @media screen and (max-width: 1050px) {
+    margin-left: $small-margin;
+  }
   @media screen and (max-width: 1000px) {
     margin-top: 0px;
+  }
+  @media screen and (max-width: $break-small) {
+    margin: 0px;
   }
 }
 
 .project-description {
   margin-right: $main-margin;
+  @media screen and (max-width: 1050px) {
+    margin: 0px $small-margin;
+  }
+  @media screen and (max-width: $break-small) {
+    margin: 0px;
+  }
 }
