--- a/src/styles/partials/footer.scss
+++ b/src/styles/partials/footer.scss
@@ -6,7 +6,7 @@
   position: fixed;
   right: 0;
   z-index: 100000000;
-  @media screen and (max-width: $break-small) {
+  @media screen and (max-width: $break-medium) {
     margin: 5px $small-margin;
   }
 }
