--- a/src/styles/partials/home.scss
+++ b/src/styles/partials/home.scss
@@ -4,7 +4,7 @@
   opacity: 0;
   position: absolute;
   z-index: -1;
-  @media screen and (max-width: $break-small) {
+  @media screen and (max-width: $break-medium) {
     margin: $small-margin;
   }
 }
