--- a/src/styles/partials/projects.scss
+++ b/src/styles/partials/projects.scss
@@ -13,12 +13,16 @@
     height: 100vh;
     margin: $main-margin;
   }
+  @media screen and (max-width: $break-small) {
+    margin: $small-margin;
+  }
 }
 
 .project-left {
   width: 50%;
   float: left;
   @media screen and (max-width: 1000px) {
+    border-top: 1px solid $blue-color;
     width: 100%;
   }
 }
@@ -62,7 +66,7 @@
     margin-top: 0px;
   }
   @media screen and (max-width: $break-small) {
-    margin: 0px;
+    margin: $small-margin;
   }
 }
 
@@ -72,6 +76,6 @@
     margin: 0px $small-margin;
   }
   @media screen and (max-width: $break-small) {
-    margin: 0px;
+    margin: $small-margin;
   }
 }
