--- a/src/styles/partials/typography.scss
+++ b/src/styles/partials/typography.scss
@@ -8,7 +8,11 @@ h1 {
     letter-spacing: -2px;
   }
   @media screen and (max-width: $break-medium) {
-    font-size: $hero-title-font-size*.6;
+    font-size: $hero-title-font-size*.8;
+    letter-spacing: -3px;
+  }
+  @media screen and (max-width: $break-small) {
+    font-size: $hero-title-font-size*.65;
     letter-spacing: -3px;
   }
 }
